// Generated file
import "ccsds_mal/types.proto";



package accessControlModel.protobuf;

message UserConnection {
extensions 7 to 107;

  optional ccsds_mal.protobuf.STRING userName = 1;
  optional ccsds_mal.protobuf.STRING serverName = 2;
  optional ccsds_mal.protobuf.STRING terminalId = 3;
  optional ccsds_mal.protobuf.STRING genericAccount = 4;
  optional ccsds_mal.protobuf.TIME loginTime = 5;
  optional ccsds_mal.protobuf.BLOB authID = 6;
}
