// Produced by Acceleo JavaScript Generator 1.1.0
import "ccsds_mal/types.proto";
import "pusGroundModel/Pus005OnBoardEvent.proto";
import "pusGroundModel/PusElement.proto";


package pusGroundModel.protobuf;

message Pus005Model {
extensions 7 to 107;

  optional ccsds_mal.protobuf.UINTEGER apid = 1;
  repeated pusGroundModel.protobuf.Pus005OnBoardEvent pus005OnBoardEvent = 2;
  optional ccsds_mal.protobuf.TIME groundDate = 3;
  optional ccsds_mal.protobuf.UINTEGER noMonitoringEvents = 4;
  optional ccsds_mal.protobuf.UINTEGER noEventReports = 5;
  optional pusGroundModel.protobuf.PusElement pusElement = 6;
}
