// Generated file
import "ccsds_mal/types.proto";
import "pusGroundModel/Pus018ConfiguredObcp.proto";
import "pusGroundModel/Pus018Obcp.proto";
import "pusGroundModel/PusElement.proto";


package pusGroundModel.protobuf;

message Pus018Model {
extensions 8 to 108;

  optional ccsds_mal.protobuf.UINTEGER engineStatus = 1;
  repeated pusGroundModel.protobuf.Pus018Obcp pus018Obcp = 2;
  optional ccsds_mal.protobuf.TIME groundDate = 3;
  optional ccsds_mal.protobuf.UINTEGER apid = 4;
  optional ccsds_mal.protobuf.UINTEGER noOBCPs = 5;
  optional pusGroundModel.protobuf.PusElement pusElement = 6;
  repeated pusGroundModel.protobuf.Pus018ConfiguredObcp pus018ConfiguredObcp = 7;
}
