// Produced by Acceleo JavaScript Generator 1.1.0
import "../ccsds_mal/types.proto";
import "./Pus144OnboardFiles.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus144Model {
extensions 6 to 106;

  repeated pusGroundModel.protobuf.Pus144OnboardFiles pus144OnboardFiles = 1;
  optional ccsds_mal.protobuf.TIME groundDate = 2;
  optional ccsds_mal.protobuf.UINTEGER apid = 3;
  optional ccsds_mal.protobuf.UINTEGER noOfOnBoardFiles = 4;
  optional pusGroundModel.protobuf.PusElement pusElement = 5;
}
